<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="hello_activity_text_text">Hello, World!</string>
	
	
	<!-- Home Action Strings -->
	<string name="description_logo">DERF</string>
	<string name="description_home">Home Screen</string>
	<string name="description_refresh">Refresh</string>
	<string name="btn_topnews">Top News</string>
	<string name="btn_categories">Categories</string>
	<string name="btn_events">Events</string>
	<string name="btn_albums">Albums</string>
	<string name="happy_hour_loading">Happy Hour Loading</string>
	<string name="happy_hour_text">derf happy hour</string>
	
	
	

</resources>
